# entropic-chaos

./: .gitignore  Cargo.toml  README.md  entropicchaos.py  main.py  requirements.txt
src/: lib.rs
